@@ -45,23 +45,28 @@ public class WOAnalyticsController {
     private final LaborService laborService;
     private final WorkOrderCategoryService workOrderCategoryService;
     private final AssetService assetService;
+    private final CompanyService companyService;
 
     @PostMapping("/complete/overview")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getCompleteStats",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<WOStats> getCompleteStats(@Parameter(hidden = true) @CurrentUser User user,
-                                                    @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange) {
+                                                    @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange,
+                                                    @RequestParam(required = false) @Parameter(description = "Filter " +
+                                                            "by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
                             , dateRange.getEnd());
             Collection<WorkOrder> completedWO =
-                    workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                    workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
             Collection<WorkOrder> withFirstTimeToReactWO =
-                    workOrders.stream().filter(workOrder -> workOrder.getFirstTimeToReact() != null).collect(Collectors.toList());
+                    workOrders.stream().filter(workOrder -> workOrder.getFirstTimeToReact() != null).toList();
             int total = workOrders.size();
             int complete = completedWO.size();
             int compliant = (int) completedWO.stream().filter(WorkOrder::isCompliant).count();
@@ -90,9 +95,9 @@ public class WOAnalyticsController {
             result = workOrderService.findByCompany(user.getCompany().getId());
         }
         workOrders =
-                result.stream().filter(workOrder -> !workOrder.isArchived() && !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                result.stream().filter(workOrder -> !workOrder.isArchived() && !workOrder.getStatus().equals(Status.COMPLETE)).toList();
         completeWorkOrders =
-                result.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                result.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
 
         int open = (int) workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.OPEN)).count();
         int onHold =
@@ -123,16 +128,16 @@ public class WOAnalyticsController {
         Date weekStart = Helper.localDateToDate(LocalDate.now().minusDays(7));
         Collection<WorkOrder> workOrders = workOrderService.findByCompany(user.getCompany().getId());
         Collection<WorkOrder> completeWO =
-                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
         Collection<WorkOrder> compliantWO =
-                completeWO.stream().filter(WorkOrder::isCompliant).collect(Collectors.toList());
+                completeWO.stream().filter(WorkOrder::isCompliant).toList();
         Collection<WorkOrder> completeWOWeek =
-                completeWO.stream().filter(workOrder -> workOrder.getCompletedOn() != null && workOrder.getCompletedOn().before(new Date()) && workOrder.getCompletedOn().after(weekStart)).collect(Collectors.toList());
+                completeWO.stream().filter(workOrder -> workOrder.getCompletedOn() != null && workOrder.getCompletedOn().before(new Date()) && workOrder.getCompletedOn().after(weekStart)).toList();
         Collection<WorkOrder> compliantWOWeek = compliantWO.stream().filter(workOrder -> {
             if (workOrder.getCompletedOn() == null) {
                 return true;
             } else return workOrder.getCompletedOn().after(weekStart);
-        }).collect(Collectors.toList());
+        }).toList();
         return ResponseEntity.ok(MobileWOStatsExtended.builder()
                 .complete(completeWO.size())
                 .completeWeek(completeWOWeek.size())
@@ -146,20 +151,23 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getIncompleteStats",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<WOIncompleteStats> getIncompleteStats(@Parameter(hidden = true) @CurrentUser User user,
                                                                 @Parameter(description = "Date range for filtering " +
-                                                                        "analytics") @RequestBody DateRange dateRange) {
+                                                                        "analytics") @RequestBody DateRange dateRange,
+                                                                @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
                             , dateRange.getEnd());
             Collection<WorkOrder> incompleteWO =
-                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).toList();
             int total = incompleteWO.size();
             List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getRealCreatedAt(),
-                    new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
+                    new Date(), TimeUnit.DAYS)).toList();
             int averageAge = ages.size() == 0 ? 0 : ages.stream().mapToInt(Long::intValue).sum() / ages.size();
             return ResponseEntity.ok(WOIncompleteStats.builder()
                     .total(total)
@@ -172,17 +180,20 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getIncompleteByPriority",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<WOStatsByPriority> getIncompleteByPriority(@Parameter(hidden = true) @CurrentUser User user,
                                                                      @Parameter(description = "Date range for " +
-                                                                             "filtering analytics") @RequestBody DateRange dateRange) {
+                                                                             "filtering analytics") @RequestBody DateRange dateRange,
+                                                                     @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
                             , dateRange.getEnd());
             Collection<WorkOrder> incompleteWO =
-                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).toList();
 
             Pair<Integer, Double> highValues = getCountsAndEstimatedDurationByPriority(Priority.HIGH, incompleteWO);
             Pair<Integer, Double> noneValues = getCountsAndEstimatedDurationByPriority(Priority.NONE, incompleteWO);
@@ -224,16 +235,20 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOStatuses",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<WOStatuses> getWOStatuses(@Parameter(hidden = true) @CurrentUser User user,
-                                                    @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange) {
+                                                    @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange,
+                                                    @RequestParam(required = false) @Parameter(description = "Filter " +
+                                                            "by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
                             , dateRange.getEnd());
             Collection<WorkOrder> incompleteWO =
-                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).toList();
 
             return ResponseEntity.ok(WOStatuses.builder()
                     .open(getWOCountsByStatus(Status.OPEN, incompleteWO))
@@ -248,14 +263,17 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getIncompleteByAsset",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<Collection<IncompleteWOByAsset>> getIncompleteByAsset(@Parameter(hidden = true) @CurrentUser User user,
                                                                                 @Parameter(description = "Date range " +
-                                                                                        "for filtering analytics") @RequestBody DateRange dateRange) {
+                                                                                        "for filtering analytics") @RequestBody DateRange dateRange,
+                                                                                @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             List<Object[]> rows = workOrderService.findTopNAssetsByIncompleteWO(
-                    user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd(), 10);
+                    resolvedCompanyId, dateRange.getStart(), dateRange.getEnd(), 10);
             Collection<IncompleteWOByAsset> result = rows.stream()
                     .map(row -> IncompleteWOByAsset.builder()
                             .id((Long) row[0])
@@ -272,21 +290,24 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getIncompleteByUser",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<Collection<IncompleteWOByUser>> getIncompleteByUser(@Parameter(hidden = true) @CurrentUser User user,
                                                                               @Parameter(description = "Date range " +
-                                                                                      "for filtering analytics") @RequestBody DateRange dateRange) {
+                                                                                      "for filtering analytics") @RequestBody DateRange dateRange,
+                                                                              @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
-            Collection<User> users = userService.findWorkersByCompany(user.getCompany().getId());
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
+            Collection<User> users = userService.findWorkersByCompany(resolvedCompanyId);
             Collection<IncompleteWOByUser> result = new ArrayList<>();
             users.forEach(user1 -> {
                 Collection<WorkOrder> incompleteWO =
                         workOrderService.findByAssignedToUserAndCreatedAtBetween(user1.getId(), dateRange.getStart(),
                                         dateRange.getEnd())
-                                .stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                                .stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).toList();
                 List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getCreatedAt(),
-                        new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
+                        new Date(), TimeUnit.DAYS)).toList();
                 int count = incompleteWO.size();
                 result.add(IncompleteWOByUser.builder()
                         .count(count)
@@ -304,13 +325,17 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOHours",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<WOHours> getHours(@Parameter(hidden = true) @CurrentUser User user,
-                                            @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange) {
+                                            @Parameter(description = "Date range for filtering analytics") @RequestBody DateRange dateRange,
+                                            @RequestParam(required = false) @Parameter(description = "Filter by " +
+                                                    "specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> workOrders =
-                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                    workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId, dateRange.getStart()
                             , dateRange.getEnd());
             double estimated =
                     workOrders.stream().map(WorkOrderBase::getEstimatedDuration).mapToDouble(value -> value).sum();
@@ -328,13 +353,16 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCountsByUser",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<Collection<WOCountByUser>> getCountsByUser(@Parameter(hidden = true) @CurrentUser User user,
                                                                      @Parameter(description = "Date range for " +
-                                                                             "filtering analytics") @RequestBody DateRange dateRange) {
+                                                                             "filtering analytics") @RequestBody DateRange dateRange,
+                                                                     @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
-            Collection<User> users = userService.findWorkersByCompany(user.getCompany().getId());
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
+            Collection<User> users = userService.findWorkersByCompany(resolvedCompanyId);
             Collection<WOCountByUser> results = new ArrayList<>();
             users.forEach(user1 -> {
                 int count = (int) workOrderService.findByAssignedToUserAndCreatedAtBetween(user1.getId(),
@@ -355,13 +383,16 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCountsByCompletedBy",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<Collection<WOCountByUser>> getCountsByCompletedBy(@Parameter(hidden = true) @CurrentUser User user,
                                                                             @Parameter(description = "Date range for " +
-                                                                                    "filtering analytics") @RequestBody DateRange dateRange) {
+                                                                                    "filtering analytics") @RequestBody DateRange dateRange,
+                                                                            @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
-            Collection<User> users = userService.findWorkersByCompany(user.getCompany().getId());
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
+            Collection<User> users = userService.findWorkersByCompany(resolvedCompanyId);
             Collection<WOCountByUser> results = new ArrayList<>();
             users.forEach(user1 -> {
                 int count = (int) workOrderService.findByCompletedByAndCreatedAtBetween(user1.getId(),
@@ -382,17 +413,20 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCountsByPriority",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<Map<Priority, Integer>> getCountsByPriority(@Parameter(hidden = true) @CurrentUser User user,
                                                                       @Parameter(description = "Date range for " +
-                                                                              "filtering analytics") @RequestBody DateRange dateRange) {
+                                                                              "filtering analytics") @RequestBody DateRange dateRange,
+                                                                      @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Priority[] priorities = Priority.values();
             Map<Priority, Integer> results = new HashMap<>();
             Arrays.asList(priorities).forEach(priority -> {
                 int count = (int) workOrderService.findByPriorityAndCompanyAndCreatedAtBetween(priority,
-                                user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd()).stream()
+                                resolvedCompanyId, dateRange.getStart(), dateRange.getEnd()).stream()
                         .filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).count();
                 results.put(priority, count);
             });
@@ -404,14 +438,20 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCountsByCategory",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<Collection<WOCountByCategory>> getCountsByCategory(@Parameter(hidden = true) @CurrentUser User user,
                                                                              @Parameter(description = "Date range for" +
-                                                                                     " filtering analytics") @RequestBody DateRange dateRange) {
+                                                                                     " filtering analytics") @RequestBody DateRange dateRange,
+                                                                             @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrderCategory> categories =
-                    workOrderCategoryService.findByCompanySettings(user.getCompany().getCompanySettings().getId());
+                    workOrderCategoryService.findByCompanySettings(
+                            companyService.findById(resolvedCompanyId)
+                                    .orElseThrow(() -> new CustomException("Company not found", HttpStatus.NOT_FOUND))
+                                    .getCompanySettings().getId());
             Collection<WOCountByCategory> results = new ArrayList<>();
             categories.forEach(category -> {
                 int count = (int) workOrderService.findByCategoryAndCreatedAtBetween(category.getId(),
@@ -431,18 +471,20 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCompleteByWeek",
-            key = "#user.id"
+            key = "#user.id + (#companyId != null ? '_' + #companyId : '')"
     )
-    public ResponseEntity<List<WOCountByWeek>> getCompleteByWeek(@Parameter(hidden = true) @CurrentUser User user) {
+    public ResponseEntity<List<WOCountByWeek>> getCompleteByWeek(@Parameter(hidden = true) @CurrentUser User user,
+                                                                 @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             List<WOCountByWeek> result = new ArrayList<>();
             LocalDate previousMonday =
                     LocalDate.now(ZoneId.of("UTC"));
             // .with(TemporalAdjusters.previous(DayOfWeek.MONDAY));
             for (int i = 0; i < 5; i++) {
                 Collection<WorkOrder> completeWorkOrders =
-                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), user.getCompany().getId())
-                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), resolvedCompanyId)
+                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
                 int compliant = (int) completeWorkOrders.stream().filter(WorkOrder::isCompliant).count();
                 int reactive = (int) completeWorkOrders.stream().filter(WorkOrder::isReactive).count();
                 result.add(WOCountByWeek.builder()
@@ -461,20 +503,22 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCompleteTimeByWeek",
-            key = "#user.id"
+            key = "#user.id + (#companyId != null ? '_' + #companyId : '')"
     )
-    public ResponseEntity<List<WOTimeByWeek>> getCompleteTimeByWeek(@Parameter(hidden = true) @CurrentUser User user) {
+    public ResponseEntity<List<WOTimeByWeek>> getCompleteTimeByWeek(@Parameter(hidden = true) @CurrentUser User user,
+                                                                    @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             List<WOTimeByWeek> result = new ArrayList<>();
             LocalDate previousMonday =
                     LocalDate.now(ZoneId.of("UTC"));
             // .with(TemporalAdjusters.previous(DayOfWeek.MONDAY));
             for (int i = 0; i < 5; i++) {
                 Collection<WorkOrder> completeWorkOrders =
-                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), user.getCompany().getId())
-                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), resolvedCompanyId)
+                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
                 Collection<WorkOrder> reactiveWorkOrders =
-                        completeWorkOrders.stream().filter(WorkOrder::isReactive).collect(Collectors.toList());
+                        completeWorkOrders.stream().filter(WorkOrder::isReactive).toList();
 
                 long total = getTime(completeWorkOrders);
                 long reactive = getTime(reactiveWorkOrders);
@@ -493,14 +537,17 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCompleteCostsAndTime",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<WOCostsAndTime> getCompleteCostsAndTime(@Parameter(hidden = true) @CurrentUser User user,
                                                                   @Parameter(description = "Date range for filtering " +
-                                                                          "analytics") @RequestBody DateRange dateRange) {
+                                                                          "analytics") @RequestBody DateRange dateRange,
+                                                                  @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             Collection<WorkOrder> completeWorkOrders = workOrderService.findByCompanyAndCreatedAtBetween(
-                    user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd()).stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                    resolvedCompanyId, dateRange.getStart(), dateRange.getEnd()).stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).toList();
             double additionalCost = workOrderService.getAdditionalCost(completeWorkOrders);
             long laborCost = workOrderService.getLaborCostAndTime(completeWorkOrders).getFirst();
             long laborTime = workOrderService.getLaborCostAndTime(completeWorkOrders).getSecond();
@@ -522,14 +569,17 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOCompleteCostsByDate",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<List<WOCostsByDate>> getCompleteCostsByDate(@Parameter(hidden = true) @CurrentUser User user,
-                                                                       @Parameter(description = "Date range for " +
-                                                                               "filtering analytics") @RequestBody DateRange dateRange) {
+                                                                      @Parameter(description = "Date range for " +
+                                                                              "filtering analytics") @RequestBody DateRange dateRange,
+                                                                      @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             List<Object[]> rows = workOrderService.findWOCostsByDateRange(
-                    user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd());
+                    resolvedCompanyId, dateRange.getStart(), dateRange.getEnd());
 
             LocalDate endDateLocale = Helper.dateToLocalDate(dateRange.getEnd());
             List<WOCostsByDate> result = new ArrayList<>();
@@ -572,14 +622,17 @@ public class WOAnalyticsController {
     @PreAuthorize("hasRole('ROLE_CLIENT')")
     @Cacheable(
             value = "getWOStatusesByDate",
-            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end)"
+            key = "T(com.grash.utils.CacheKeyUtils).dateRangeKey(#user.id, #dateRange.start, #dateRange.end) + " +
+                    "(#companyId != null ? '_' + #companyId : '')"
     )
     public ResponseEntity<List<WOStatusesByDate>> getReceivedAndResolvedForDateRange(@Parameter(hidden = true) @CurrentUser User user,
                                                                                      @Parameter(description = "Date " +
                                                                                              "range for filtering " +
-                                                                                             "analytics") @RequestBody DateRange dateRange) {
+                                                                                             "analytics") @RequestBody DateRange dateRange,
+                                                                                     @RequestParam(required = false) @Parameter(description = "Filter by specific company") Long companyId) {
         LocalDate endDateLocale = Helper.dateToLocalDate(dateRange.getEnd());
         if (user.canSeeAnalytics()) {
+            Long resolvedCompanyId = Helper.resolveCompanyId(user, companyId);
             List<WOStatusesByDate> result = new ArrayList<>();
             LocalDate currentDate = Helper.dateToLocalDate(dateRange.getStart());
             LocalDate endDateExclusive = Helper.dateToLocalDate(dateRange.getEnd()).plusDays(1); // Include end date
@@ -593,7 +646,7 @@ public class WOAnalyticsController {
                 // range
                 nextDate = nextDate.isAfter(endDateLocale) ? endDateLocale : nextDate; // Adjust for the end date
                 Collection<WorkOrder> workOrders =
-                        workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(),
+                        workOrderService.findByCompanyAndCreatedAtBetween(resolvedCompanyId,
                                 dateRange.getStart(), Helper.localDateToDate(nextDate));
                 LocalDate finalNextDate = nextDate;
                 Collection<Status> statuses = workOrders.stream().map(workOrder -> {
@@ -601,7 +654,7 @@ public class WOAnalyticsController {
                             Helper.localDateToDate(finalNextDate).getTime(), PageRequest.of(0, 1));
                     if (workOrderAuds.isEmpty()) return workOrder.getStatus();
                     else return workOrderAuds.get(0).getStatus();
-                }).filter(Objects::nonNull).collect(Collectors.toList());
+                }).filter(Objects::nonNull).toList();
 
                 result.add(WOStatusesByDate.builder()
                         .open((int) statuses.stream().filter(status -> status.equals(Status.OPEN)).count())
@@ -619,7 +672,7 @@ public class WOAnalyticsController {
     private Pair<Integer, Double> getCountsAndEstimatedDurationByPriority(Priority priority,
                                                                           Collection<WorkOrder> workOrders) {
         Collection<WorkOrder> priorityWO =
-                workOrders.stream().filter(workOrder -> workOrder.getPriority().equals(priority)).collect(Collectors.toList());
+                workOrders.stream().filter(workOrder -> workOrder.getPriority().equals(priority)).toList();
         int priorityCounts = priorityWO.size();
         double priorityEstimatedDurations =
                 priorityWO.stream().map(WorkOrderBase::getEstimatedDuration).mapToDouble(value -> value).sum();
@@ -628,7 +681,7 @@ public class WOAnalyticsController {
 
     private int getWOCountsByStatus(Status status, Collection<WorkOrder> workOrders) {
         Collection<WorkOrder> statusWO =
-                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(status)).collect(Collectors.toList());
+                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(status)).toList();
         return statusWO.size();
     }
 
@@ -639,5 +692,6 @@ public class WOAnalyticsController {
         });
         return labors.stream().mapToLong(Time::getDuration).sum();
     }
+
 }
 
